# DineWaterMark

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: api.py
backend/app/services/: image_processeur.py  pdf_processeur.py  pptx_processeur.py
backend/app/services/watermark/: detecteur.py  gemini_math.py  suppresseur.py
backend/app/utils/: file_utils.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Dropzone.jsx  Navbar.jsx  ProgressPanel.jsx  ResultPanel.jsx
frontend/src/utils/: api.js
